force-app/main/default/objects/Lead/fields/Help_Description__c.field-meta.xml
<CustomField>
    <fullName>Help_Description__c</fullName>
    <description>Field for writing help description</description>
    <label>Help Description</label>
    <type>TextArea</type>
</CustomField>