force-app/main/default/objects/Lead/fields/Need_Attention__c.field-meta.xml
<CustomField>
    <fullName>Need_Attention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Attention</label>
    <type>Checkbox</type>
</CustomField>