force-app/main/default/objects/Lead/fields/Outreaches_count__c.field-meta.xml
<CustomField>
    <fullName>Outreaches_count__c</fullName>
    <label>Outreaches count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>