force-app/main/default/objects/Lead/fields/Percentage_of_successful_Outreaches__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_successful_Outreaches__c</fullName>
    <formula>( Successful_Outreaches__c  * 100)/Outreaches_count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage of successful Outreaches</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>