force-app/main/default/objects/Lead/fields/Skills_Description__c.field-meta.xml
<CustomField>
    <fullName>Skills_Description__c</fullName>
    <description>A field for writing a skill description</description>
    <label>Skills Description</label>
    <type>TextArea</type>
</CustomField>