force-app/main/default/objects/Lead/fields/Successful_Outreaches__c.field-meta.xml
<CustomField>
    <fullName>Successful_Outreaches__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Successful Outreaches</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>