force-app/main/default/objects/Lead/validationRules/Number_should_be_valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_should_be_valid</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Phone)),
 NOT(REGEX(Phone, &quot;^(\\+?[1-9]\\d{1,14})$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Invalid phone number</errorMessage>
</ValidationRule>