force-app/main/default/objects/Lead/validationRules/valid_email.validationRule-meta.xml
<ValidationRule>
    <fullName>valid_email</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Email)),
 NOT(REGEX(Email, &quot;^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>invalid email</errorMessage>
</ValidationRule>