force-app/main/default/objects/Lead/listViews/Need_Attention_Lead.listView-meta.xml
<ListView>
    <fullName>Need_Attention_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Need_Attention__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed - Converted,Closed - Not Converted,Closed Won,Closed Failed</value>
    </filters>
    <label>Need Attention Lead</label>
</ListView>